--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
-    "@apollo/client": "^3.5.6",
-    "apollo-angular": "^2.6.0",
+    "@apollo/client": "^3.5.9",
+    "apollo-angular": "^3.0.0",
     "apollo-link": "^1.2.14",
     "apollo-link-error": "^1.1.13",
     "apollo-link-http": "^1.5.17",
@@ -31,7 +31,7 @@
     "pdfmake": "^0.2.4",
     "primeflex": "^3.1.1",
     "primeicons": "^5.0.0",
-    "primeng": "^13.0.2",
+    "primeng": "^13.2.0",
     "rxjs": "~7.4.0",
     "sweetalert2": "^11.3.0",
     "tslib": "^2.3.0",
@@ -46,7 +46,7 @@
     "@types/node": "^12.20.38",
     "@types/pdfmake": "^0.1.19",
     "jasmine-core": "~3.10.0",
-    "karma": "~6.3.0",
+    "karma": "^6.3.16",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
