--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,7 +40,8 @@
           "error"
         ],
         "@typescript-eslint/member-ordering": 0,
-        "@typescript-eslint/naming-convention": 0
+        "@typescript-eslint/naming-convention": 0,
+        "@typescript-eslint/no-unused-vars": "warn"
       }
     },
     {
