Se crea modulo y componente para la conciliacion de los Utiles y Herramientas

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -56,7 +56,7 @@
       "rules": {
         "prettier/prettier": ["error", 
           { "parser": "angular" },
-          { "endOfLine": "auto" }
+          { "endOfLine": "lf" }
         ]
       }
     }
